--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <img src="crop1.jpg" alt="Crops" class="img1">
       <img src="crop2.jpg" alt="Crops" class="img2">
       <img src="crop3.jpg" alt="Crops" class="img3">
-      <p class="caption">Most Traded crops</p>
+      <p>Most Traded crops</p>
     </div>
   </section>
 
