--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
     <div class="logo">
         <img src="logoWhite.png" alt="Agrotec Logo">
     </div>
-    <button><a class="nav-btn" href="dashboard.html"></a>Log In →</button>
+    <button class="loginBtn" id="logBtn">Log In →</button>
   </header>
 
   <!-- Login Container -->
@@ -40,7 +40,7 @@
           <label for="remember">Remember me</label>
         </div>
 
-        <button type="submit" class="btn" id="logBtn">Log In</button>
+        <button type="submit" class="btn" id="loginBtn">Log In</button>
       </form>
 
       <p class="signup">Do not have an account? <a href="signupPage.html">Sign up</a></p>
