--- a/signupPage.html
+++ b/signupPage.html
@@ -44,5 +44,17 @@
       <p class="login">Already have an account? <a href="login.html">Login</a></p>
     </div>
   </main>
+
+  <script>
+  document.addEventListener('DOMContentLoaded', function() {
+    const signupForm = document.querySelector('.rightPanel form');
+    if (signupForm) {
+      signupForm.addEventListener('submit', function(e) {
+        e.preventDefault(); // Prevents the form from submitting
+        window.location.href = 'dashboard.html'; // Redirect to dashboard page
+      });
+    }
+  });
+</script>
 </body>
 </html>
